# egui_fader

./: Cargo.toml  README.md
example/: example_fader.rs
src/: lib.rs  peak.rs
