[package]
name = "egui_fader"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Fader widget for egui applications."
homepage = "https://github.com/elisedemarie/egui_fader"
repository = "https://github.com/elisedemarie/egui_fader"
readme = "README.md"
keywords = ["egui", "ui", "widget", "slider", "audio"]
categories = ["gui"]

[[example]]
name = "example_fader"
path = "example/example_fader.rs"

[dependencies]
dasp = "0.11.0"
dasp_frame = "0.11.0"
dasp_signal = "0.11.0"
egui = "0.31.1"

[dev-dependencies]
eframe = { version = "0.31.1", features = ["default_fonts"] }
